<resources>
    <string name="app_name">Instagram</string>
    <string name="login">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="password">password</string>
    <string name="igLogo">Instagram Logo</string>
    <string name="username">username</string>
    <string name="errorMsg">
        Sorry, your password was incorrect.\nPlease double-check your password.
    </string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="todo">TODO</string>
    <string name="take_picture">Take Picture</string>
    <string name="caption">Caption...</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>